- [MINOR] [SW/M] [UPDATE] 1. survey_dml a. core part of dml moved to survey_dml_core_1 - [MAJOR] [SW/M] [CREATE] 1. survery_dml a. survey_dml_core_2 and 3 created to optimize run time

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 doc/survey_dml/build/
+sw/matlab/survey_dml/codegen/lib/*/examples
+sw/matlab/survey_dml/codegen/lib/*/html
+sw/matlab/survey_dml/codegen/lib/*/interface
+sw/matlab/survey_dml/codegen/lib/*/*.bat
+sw/matlab/survey_dml/codegen/lib/*/*.dmr
+sw/matlab/survey_dml/codegen/lib/*/*.mat
+sw/matlab/survey_dml/codegen/lib/*/*.mk
+sw/matlab/survey_dml/codegen/lib/*/*.o
+sw/matlab/survey_dml/codegen/lib/*/*.rsp
+sw/matlab/survey_dml/codegen/lib/*/*.tmw
+sw/matlab/survey_dml/codegen/mex
